--- a/package.json
+++ b/package.json
@@ -22,9 +22,13 @@
     "eslint-config-next": "13.2.4",
     "fontsource-montserrat": "^4.0.0",
     "fontsource-poppins": "^4.0.0",
+    "i18next": "^23.7.15",
+    "i18next-browser-languagedetector": "^7.2.0",
+    "i18next-http-backend": "^2.4.2",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^14.0.0",
     "react-intersection-observer": "^9.5.3",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.21.1",
