--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@mui/material": "^5.15.2",
     "@mui/system": "^5.15.2",
     "@next/font": "^14.0.4",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/pdfjs-dist-signature": "^2.7.570",
+    "@types/jspdf": "^2.0.0",
     "@types/node": "18.15.3",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -22,16 +25,21 @@
     "eslint-config-next": "13.2.4",
     "fontsource-montserrat": "^4.0.0",
     "fontsource-poppins": "^4.0.0",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.1",
     "i18next": "^23.7.15",
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-http-backend": "^2.4.2",
+    "jspdf": "^2.5.1",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^14.0.0",
     "react-intersection-observer": "^9.5.3",
+    "react-pdf": "^7.6.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.21.1",
+    "react-to-pdf": "^1.0.1",
     "typescript": "4.9.5"
   }
 }
